Bug 167368 - Chart style index is not exported to OOXML
Summary: Chart style index is not exported to OOXML
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: kurt.nordback@protonmail.com
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2025-07-03 12:44 UTC by kurt.nordback@protonmail.com
Modified: 2025-08-07 17:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
File that includes a style tag (11.75 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2025-07-03 13:00 UTC, kurt.nordback@protonmail.com
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kurt.nordback@protonmail.com 2025-07-03 12:44:38 UTC
Description:
OOXML charts support a <c:style> tag which can specify an enumerated index, with allowed values 1-48 or 101-148. The index determines the default style for the chart, according to tables in the OOXML specification.

LO currently supports import of this style tag, and properly sets the default style. It does not support export of the tag, so the default is lost on re-export to OOXML.

Steps to Reproduce:
This is most easily seen in the OOXML itself.

1. Open the attached "column-style.xlsx" in LO.
2. Re-save as OOXML format.
3. Unzip the original and re-exported files, and examine the respective xl/charts/chart1.xml files.

Actual Results:
The original file includes a <c:style ...> tag, but the re-exported file does not.

Expected Results:
The re-exported file includes the same <c:style ...> tag as the original.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3f42583a772667f88715ed408be89b927cefb53b
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 kurt.nordback@protonmail.com 2025-07-03 13:00:58 UTC
Created attachment 201637 [details]
File that includes a style tag
Comment 2 Commit Notification 2025-07-11 16:33:12 UTC
Kurt Nordback committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4313451fc77f641dc63a8b32edb03c6aa2636ae9

tdf#167368 - Chart style index is not exported to OOXML

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-08-07 17:43:01 UTC
Kurt Nordback committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/77ad59130533d459572af9434bad4c36a7ee049d

tdf#167368 - Chart style index is not exported to OOXML

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.