tdf#167368 - Chart style index is not exported to OOXML

Add support for style index export, and a CI test for this.

Change-Id: Idb109ef705a6bf8338e18040d447c2806c0781ee
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187425
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit 4313451fc77f641dc63a8b32edb03c6aa2636ae9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187767
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>