chart2/source/model/main/Diagram.cxx
@@ -101,7 +101,8 @@ enum
     PROP_DIAGRAM_SPLIT_POS,
     PROP_DIAGRAM_DATATABLEVBORDER,
     PROP_DIAGRAM_DATATABLEOUTLINE,
-    PROP_DIAGRAM_EXTERNALDATA
+    PROP_DIAGRAM_EXTERNALDATA,
+    PROP_DIAGRAM_STYLE_INDEX
 };
 
 void lcl_AddPropertiesToVector(
@@ -195,6 +196,10 @@ void lcl_AddPropertiesToVector(
                   beans::PropertyAttribute::MAYBEVOID );
     rOutProperties.emplace_back( "ExternalData",
                   PROP_DIAGRAM_EXTERNALDATA,
+                  cppu::UnoType<OUString>::get(),
+                  beans::PropertyAttribute::MAYBEVOID );
+    rOutProperties.emplace_back( "StyleIndex",
+                  PROP_DIAGRAM_STYLE_INDEX,
                   cppu::UnoType<OUString>::get(),
                   beans::PropertyAttribute::MAYBEVOID );
 }
